On NetBSD: "pipe error: Message too long" in ipc_channel_posix.cc
Categories
(Core :: IPC, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox69 | --- | fixed |
People
(Reporter: pho, Assigned: pho)
Details
Attachments
(1 file)
|
1.56 KB,
patch
|
jld
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (X11; NetBSD amd64; rv:66.0) Gecko/20100101 Firefox/66.0
Steps to reproduce:
Start Firefox normally.
Actual results:
In the Browser Console it shows the same error as the bug 1142693.
Expected results:
There should be no such errors.
It turned out that NetBSD sendmsg(2) sending an fd through a unix domain socket had the same characteristics as Darwin described in the bug 1142693, and thus the same fix needs to be applied. I will attach a patch shortly later. Other BSD kernels may be affected too, but I haven't tested them.
Sorry for the broken markup. I can't find a way to fix it. Here's the patch.
Comment 2•7 years ago
|
||
Given that it is the same as Bug 1142963, moving this over to Core:IPC
Thanks for the report!
Comment 3•7 years ago
|
||
Comment 5•7 years ago
|
||
In case anyone who sees that commit in the future is wondering about the missing review tag: r=jld, but I forgot to append it before pushing and the commit hooks don't actually enforce that it's present.
Comment 6•7 years ago
|
||
| bugherder | ||
Description
•