Bug 1553389 - Fix "pipe error: Message too long" on NetBSD